# gdocs2hugo

./: Cargo.toml  README.md
src/: config.rs  css_rules.rs  download.rs  gdoc_to_html.rs  gdocs.rs  gdocs_site.rs  html.rs  hugo_site.rs  images.rs  lib.rs  main.rs  publish.rs  tweaks.rs
src/experiments/: gdocs_api.rs  mod.rs
src/from_web_pub/: css_rules.rs  mod.rs  publish.rs  serialize.rs
tests/: publish_test.rs
tests/data/gdoc/: index.json  test-doc.html
tests/data/site/content/posts/: .gitignore  test-doc-reference.html
tests/snapshots/: publish_test__index_page.snap
