[package]
authors = ["Sylvain Wallez <sylvain@bluxte.net>"]
edition = "2018"
name = "gdocs2hugo"
version = "0.1.0"

[dependencies]
# Base stuff
anyhow = "1.0"
chrono = { version = "0.4.19", features = ["serde"] }
indoc = "1.0.7"
itertools = "0.10.3"
lazy_static = "1.4.0"
maplit = "1.0.2"
regex = "1.6.0"
structopt = "0.3.26"
rayon = "1.5.3"

# Serde and formats
serde = {version = "1.0.142" }
serde_derive = {version = "1.0.142" }
csv = "1.1.6"
serde_yaml = "0.9.4"
serde_json = "1.0"

# HTML and CSS parsing
html5ever = "0.26.0"
cssparser = "0.29.6"

scraper = "0.13.0"
selectors = "*"
ego-tree = "*"
tendril = "*"
#markup5ever = "*"

# HTTP
reqwest = {version = "0.11.11", features = ["blocking"] }
bytes = "*"
mime_guess = "2.0.4"

# Used for images
image = "0.24.3"

